--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  
+<style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
+
+<div class="container">
+  <h1>Hello</h1>
+
+  <p><strong>Follow my Quest</strong></p>
+  <p>If you wish to see my meager progress please view my <a href="/_posts">posts</a>.
+</p>
+  
+
+  <p><strong>Begin/Continue your Quest</strong></p>
+  <p>If you wish to begin or continue your own quest for infosec knowledge please visit <a href="https://tryhackme.com/" target="_blank">TryHackMe</a>. I rekindled my fascination with hacking and infosec through their Advent of Cyber 2 event, and fanned the flames through AoC3. They put together an awesome learning experience and I highly recommend it.
+</p>
+</div>
+
+
