--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+---
+permalink: /index.html
+layout: default
+---
 <!DOCTYPE html>
 
   <head>
     <meta charset="utf-8">
     <title>Home</title>
   </head>
-  
+
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
