--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
+title: Home
 permalink: /index.html
 layout: default
 ---
@@ -6,7 +7,7 @@ layout: default
 
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>{{ page.title }}</title>
   </head>
 
 <style type="text/css" media="screen">
